--- a/tacocloud-ui/src/index.html
+++ b/tacocloud-ui/src/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>TacocloudUi</title>
-  <base href="/">
+  <title>Taco Cloud</title>
+  <base href="/ui">
+
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="favicon.ico" rel="icon" type="image/x-icon">
 </head>
